-*- outline -*-

This file contains information about the version numbers
and what's changed.
Hopefully, the #defines ETHERIP_MAYOR and ETHERIP_MINOR
in ether_ipApp/src/drvEtherIP.h are updated accordingly,
so that you can see the current version at runtime via
drvEtherIP_report.

* 2006, 10/20 V2.16
Basic 'connection failed' info now also goes to error log.

* 2006, 06/06 V2.15
The code for determining the multi-request-count
had a bug: When a scan list had too many entries,
it wouldn't work at all (tags remain with "- no data -").

Some more info on the buffer limit, EIP_buffer_limit:
The default is 500, which seems to work in most cases,
but the exact size is unknown.
You can only change EIP_buffer_limit in the startup file
_before_any_other_EIP_routine is called!
It applies to both the request and the response data packages.
The driver will only assemble requests which are sized below
the buffer limit, and whose expected reply (data) is also below
the buffer limit.
These are possible errors and what to do about them.
You might have to set EIP_verbosity high enough to see the errors.

1) Request failed, ... "Buffer too small, partial data only"
This is an error message from the PLC. The PLC tried to return data
for a request, but couldn't, because the PLC's buffer is too small.
--> decrease EIP_buffer_limit, because the response needs to be
    made smaller.

2) Request failed, ... "Service not supported" or other error.
Also an error from the PLC. Might mean that the request was too big,
so the PLC didn't understand the request at all, returning some
error.
--> decrease EIP_buffer_limit, so that the driver will send smaller requests.

3) "Tag 'xyz' exceeds buffer limit of ... bytes"
An error from the driver. The single tag 'xyz' has either a request size
(basically: tag name length) or a response size (basically: data size)
that exceeds the buffer limit.
The driver won't even try to send that request to the PLC.