@@ -7,6 +7,10 @@ in ether_ipApp/src/drvEtherIP.h are updated accordingly,
 so that you can see the current version at runtime via
 drvEtherIP_report.
 
+* 2007, 04/16
+Pulled better #define setup for bool/true/false
+as suggested by Andrew Johnson into eip_bool.h
+
 * 2006, 10/20 V2.16
 Basic 'connection failed' info now also goes to error log.
 
